<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hp.studyforfun.HomeActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/backgroundimage"
        android:scaleType="centerCrop"
        android:src="@drawable/m"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/t1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:alpha="0.9"
        android:fontFamily="roboto"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/studyforfun"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.55" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="352dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <EditText
            android:id="@+id/e1"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="305dp"
            android:layout_height="50dp"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:alpha="0.4"
            android:drawableLeft="@drawable/mail"
            android:background="#404040"
            android:fontFamily="roboto"
            android:hint= "   Email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColorHint="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/e2"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="305dp"
            android:layout_height="50dp"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:drawableLeft="@drawable/name"
            android:background="#404040"
            android:alpha="0.4"
            android:fontFamily="roboto"
            android:hint="   Name"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColorHint="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button2"
            android:layout_width="305dp"
            android:layout_height="52dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="164dp"
            android:background="@drawable/button"
            android:fontFamily="roboto"
            android:onClick="login"
            android:alpha="0.9"
            android:text="@string/join"
            android:textSize="22sp"
            android:textStyle="bold"

            tools:textColor="#000000" />
    </LinearLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="-15dp" />

</android.support.constraint.ConstraintLayout>
